feat: add the ability to create rundowns without specifying a playlist
